<resources>    <string name="app_name">TableVietKTV</string>    <string name="img" />    <string name="action_settings">Settings</string>    <string name="title_song">Song</string>    <string name="title_artists">Artists</string>    <string name="title_playlist">Play List</string>    <string name="title_recommended">Recommended</string>    <string name="title_control">Control</string>    <string name="title_feel">Fun</string>    <string name="title_songs">Hot</string>    <string name="title_artists_">Hot</string>    <string name="button_vocal">Vocal</string>    <string name="button_replay">Replay</string>    <string name="button_play">Play</string>    <string name="button_next">Next</string>    <string name="button_reduce">Reduce</string>    <string name="button_add">Add</string>    <string name="button_other">Other</string>    <string name="hint_search">Search</string>    <string name="category">Category</string>    <string name="language">Language</string>    <string name="empty_song_play">No music played for the time being</string>    <string name="title_btn_back">Back…</string>    <string name="todo">TODO</string>    <string name="empty">Empty</string>    <string name="title_usb_disk">USB Disk</string>    <string name="default_duration">0:00</string>    <string name="default_page_number">0/0</string>    <string name="root">Root</string>    <string name="default_title_song">Never Be Alone / Hey There Delilahation.mp3</string>    <string name="enter_usb_devices">Enter USB Devices</string>    <string name="usb_notification">When using the USB disk, you will not be able to use the song ordering function of the system, and you will only be able to play the songs in the USB disk.</string>    <string name="cancel">Cancel</string>    <string name="ok">OK</string>    <string name="yes">Yes</string>    <string name="no">No</string>    <string name="close">Close</string>    <string name="default_artist">Jakd Jrela Doa</string>    <string name="select">Select</string>    <string name="top">Top</string>    <string name="song_added">The song has been added.</string>    <string name="setting_language">Language</string>    <string name="setting_sound_light">Sound/Light</string>    <string name="setting_general">General Settings</string>    <string name="setting_network">Network and other</string>    <string name="setting_music">Music Library</string>    <string name="setting_administrator">Administrator</string>    <string name="setting_system">System</string>    <string name="setting_off">Off/reboot</string>    <string name="language_vietnam">VietNam</string>    <string name="language_thailand">ThaiLand</string>    <string name="language_lao">Lao</string>    <string name="language_english">English</string>    <string name="language_japan">Japan</string>    <string name="language_korea">Korea</string>    <string name="language_china">China</string>    <string name="language_hongkong">Hong Kong</string>    <string name="sound">Sound</string>    <string name="music">Music</string>    <string name="tone">Tone</string>    <string name="light">Light</string>    <string name="intelligent">Intelligent</string>    <string name="full">Full</string>    <string name="clearance">Clearance</string>    <string name="txt_default">Default</string>    <string name="txt_male_voice">Male Voice</string>    <string name="txt_female_voice">Female Voice</string>    <string name="txt_treble">Treble</string>    <string name="txt_bass">Bass</string>    <string name="txt_resolution_setting">Resolution Setting</string>    <string name="txt_rating_switch">Rating Switch</string>    <string name="txt_broadcast_management">Broadcast Management</string>    <string name="txt_subtitle_settings">Subtitle Settings</string>    <string name="txt_theme">Theme</string>    <string name="txt_on_screen_time">On-Screen Time</string>    <string name="txt_cloud_song_library_switch">Cloud Song Library Switch</string>    <string name="txt_ranking_mode">Ranking Mode</string>    <string name="txt_midi_settings">MIDI Settings</string>    <string name="txt_password">Password</string>    <string name="txt_old_password">Old Password</string>    <string name="txt_new_password">New Password</string>    <string name="txt_confirm_password">Confirm Password</string>    <string name="txt_change_password">Change Password</string>    <string name="txt_specify_public_song">Specify Public Song</string>    <string name="txt_broadcast_song_track">Broadcast Song Track</string>    <string name="txt_track_switching_during_broadcast">Track Switching During Broadcast</string>    <string name="txt_list_of_broadcast_songs">List Of Broadcast Songs</string>    <string name="txt_add_broadcast_songs">Add Broadcast Songs</string>    <string name="txt_import_songs_with_usb">Import Songs With USB</string>    <string name="txt_user_delete_song">User Delete Song</string>    <string name="txt_import_song">Import Song</string>    <string name="txt_export_song">Export Song</string>    <string name="txt_backup_song">Backup Song</string>    <string name="txt_restore_song">Restore Song</string>    <string name="txt_import_singer">Import Singer</string>    <string name="txt_import_lyrics">Import Lyrics</string>    <string name="txt_song_management">Song Management</string>    <string name="txt_slow">Slow</string>    <string name="txt_medium">Medium</string>    <string name="txt_fast">Fast</string>    <string name="txt_subtitle_setting">Subtitle Setting</string>    <string name="txt_subtitle">Subtitle</string>    <string name="txt_speed">Speed</string>    <string name="txt_color">Color</string>    <string name="txt_background_video">Background Video</string>    <string name="txt_lyrics_color">Lyrics Color</string>    <string name="txt_lyric_font_size">Lyric Font Size</string>    <string name="txt_standard">Standard</string>    <string name="txt_network">Network</string>    <string name="txt_wlan">WLan</string>    <string name="txt_bluetooth">Bluetooth</string>    <string name="txt_hotspot">Hot Spot</string>    <string name="txt_setting">Setting</string>    <string name="txt_power">Power</string>    <string name="txt_reboot">Reboot</string>    <string name="txt_shutdown">Shutdown</string>    <string name="txt_online_update">Online Update</string>    <string name="txt_usb_update">USB Update</string>    <string name="txt_backup">Backup</string>    <string name="txt_restore_system">Restore System</string>    <string name="txt_sharing_settings">Sharing Settings</string>    <string name="txt_disk_capacity">Disk Capacity</string>    <string name="txt_about">About</string>    <string name="txt_help">Help</string>    <string name="txt_name">Name</string>    <string name="txt_software_version">Software Version</string>    <string name="txt_device_id">Device ID</string>    <string name="txt_mac_code">Mac Code</string>    <string name="txt_rename">Rename</string></resources>