<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="572dp"
    android:layout_height="wrap_content"
    android:minHeight="318dp"
    android:maxHeight="600dp"
    android:background="@color/white"
    android:layout_gravity="center"
    >
    <!--Layout-Top-Title-->
    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_usb_devices"
            android:textSize="26sp"
            android:gravity="center"
            android:textColor="@color/black_13"
            android:textStyle="bold"
            />

    </LinearLayout>
    <!--Layout-Middle-Message-->
    <LinearLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usb_notification"
            android:textSize="18sp"
            android:textColor="@color/black_13"
            android:alpha="0.5"
            />
    </LinearLayout>
    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/black_13"
        android:alpha="0.25"
        />
    <!--Layout-Bottom-Button-->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="28sp"
            android:text="@string/cancel"
            android:background="@color/white"
            android:textColor="@color/red"
            tools:ignore="NestedWeights" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/black_13"
            android:alpha="0.25"
            />
        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="28sp"
            android:text="@string/ok"
            android:textColor="@color/green_49"
            android:background="@color/white"
            />

    </LinearLayout>
</LinearLayout>