<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:orientation="horizontal"    tools:context=".activity.MainActivity">    <LinearLayout        android:id="@+id/layout_vocal"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/vocal"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/vocal"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_vocal"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_replay"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/replay"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/replay"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_replay_"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_play"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/play"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/play"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_play"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_next"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/next"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/next"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_next"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_reduce"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/reduce"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/reduce"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_reduce"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_add"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginRight="@dimen/dp_35"        android:gravity="center"        android:layout_gravity="center"        android:orientation="vertical">        <ImageView            android:id="@+id/add"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:clickable="true"            android:src="@drawable/add"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/button_add"            android:textColor="@color/white"            android:textSize="@dimen/sp_12"            />    </LinearLayout>    <LinearLayout        android:id="@+id/layout_other"        android:layout_width="@dimen/dp_51"        android:layout_height="@dimen/dp_51"        android:gravity="center"        android:layout_gravity="center"        android:layout_marginRight="@dimen/dp_35"        android:orientation="vertical">        <ImageView            android:id="@+id/other"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:scaleType="centerCrop"            android:clickable="true"            android:src="@drawable/other"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="match_parent"            android:text="@string/button_other"            android:textColor="@color/white"            android:textSize="@dimen/sp_12" />    </LinearLayout></LinearLayout>