<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"

    android:orientation="vertical"
    >
    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black_13"
        >
        <TextView
            android:id="@+id/btn_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_usb_disk"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/up"
            android:drawablePadding="10dp"
            android:gravity="center"
            />

    </RelativeLayout>
    <!--Bottom-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/green"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <!--Sub-Folder-Recycler-View-->
        <androidx.recyclerview.widget.RecyclerView
            android:layout_weight="1"
            android:id="@+id/rcv_sub_folder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginStart="20dp"
            >

        </androidx.recyclerview.widget.RecyclerView>
        <!--Box-Pages-->
        <LinearLayout
            android:id="@+id/boxPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/imgPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tvPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginEnd="38dp"
                android:text="@string/default_page_number"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imgNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/todo" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>