<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dataBinding"
            type="com.vk2.touchsreentab.fragment.setting.FragmentSubtitle" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/sticky"
            layout="@layout/setting_sticky_bar" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/toggle"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintTop_toTopOf="@id/toggle" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_speed"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/slow"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintTop_toTopOf="@id/slow" />

        <TextView
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_color"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/color_grey"
            app:layout_constraintStart_toStartOf="@id/v1"
            app:layout_constraintTop_toTopOf="@id/color_grey" />

        <android.support.constraint.Guideline
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <android.support.constraint.Guideline
            android:id="@+id/v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_48"
            android:background="@drawable/toggle_selector"
            android:padding="@dimen/dp_16"
            android:text=""
            android:textOff=""
            android:textOn=""
            app:layout_constraintStart_toStartOf="@id/v"
            app:layout_constraintTop_toBottomOf="@id/sticky" />


        <TextView
            android:id="@+id/slow"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="@{dataBinding.speed == dataBinding.SLOW ? @color/green :@color/grey_4}"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/txt_slow"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toStartOf="@id/medium"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/v"
            app:layout_constraintTop_toBottomOf="@id/toggle" />

        <TextView
            android:id="@+id/medium"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_40"
            android:background="@{dataBinding.speed == dataBinding.MEDIUM ? @color/green :@color/grey_4}"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/txt_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/slow"
            app:layout_constraintEnd_toStartOf="@id/fast"
            app:layout_constraintStart_toEndOf="@id/slow"
            app:layout_constraintTop_toTopOf="@id/slow" />

        <TextView
            android:id="@+id/fast"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:background="@{dataBinding.speed == dataBinding.FAST ? @color/green :@color/grey_4}"
            android:gravity="center"
            android:paddingTop="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/txt_fast"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="@id/slow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/medium"
            app:layout_constraintTop_toTopOf="@id/slow" />


        <ImageView
            android:id="@+id/color_grey"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_48"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/circle_grey"
            android:contentDescription="@string/img"
            android:padding="@dimen/dp_8"
            android:src="@{dataBinding.colors == dataBinding.GREY ? @drawable/ic_checked_black: null}"
            app:layout_constraintEnd_toStartOf="@id/color_white"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/v"
            app:layout_constraintTop_toBottomOf="@id/slow" />

        <ImageView
            android:id="@+id/color_white"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/circle_white"
            android:contentDescription="@string/img"
            android:padding="@dimen/dp_8"
            android:src="@{dataBinding.colors == dataBinding.WHITE ? @drawable/ic_checked_black: null}"
            app:layout_constraintBottom_toBottomOf="@id/color_grey"
            app:layout_constraintEnd_toStartOf="@id/color_yellow"
            app:layout_constraintStart_toEndOf="@id/color_grey"
            app:layout_constraintTop_toTopOf="@id/color_grey" />

        <ImageView
            android:id="@+id/color_yellow"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/circle_yellow"
            android:contentDescription="@string/img"
            android:padding="@dimen/dp_8"
            android:src="@{dataBinding.colors == dataBinding.YELLOW ? @drawable/ic_checked_black: null}"
            app:layout_constraintBottom_toBottomOf="@id/color_grey"
            app:layout_constraintEnd_toStartOf="@id/color_red"
            app:layout_constraintStart_toEndOf="@id/color_white"
            app:layout_constraintTop_toTopOf="@id/color_grey" />

        <ImageView
            android:id="@+id/color_red"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/circle_red"
            android:contentDescription="@string/img"
            android:padding="@dimen/dp_8"
            android:src="@{dataBinding.colors == dataBinding.RED ? @drawable/ic_checked_black: null}"
            app:layout_constraintBottom_toBottomOf="@id/color_grey"
            app:layout_constraintEnd_toStartOf="@id/color_green"
            app:layout_constraintStart_toEndOf="@id/color_yellow"
            app:layout_constraintTop_toTopOf="@id/color_grey" />

        <ImageView
            android:id="@+id/color_green"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/circle_green"
            android:contentDescription="@string/img"
            android:padding="@dimen/dp_8"
            android:src="@{dataBinding.colors == dataBinding.GREEN ? @drawable/ic_checked_black: null}"
            app:layout_constraintBottom_toBottomOf="@id/color_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/color_red"
            app:layout_constraintTop_toTopOf="@id/color_grey" />


    </android.support.constraint.ConstraintLayout>
</layout>